--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,62 @@
 # Binaries for programs and plugins
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.exe
 *.exe~
 *.dll
+*.o
+*.a
 *.so
 *.dylib
 
 # Test binary, built with `go test -c`
 *.test
 
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+# Folders
+_obj
+_test
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
+# Architecture specific extensions/prefixes
+*.[568vq]
+
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+# Artifacts, profiles, etc.
+*.prof
+*.tags
+*.swp
+*.txt
+*.tags
+tags
+*.test
+*.out
+*.zip
+*.gz
+
+# Internal
+literature/
+j/
+
+# Fuzzing
+fuzz/**/corpus
+fuzz/**/crashers
+fuzz/**/suppressions
+
+# Benchmark artifacts
+/decbench
+*.xml
+*.class
+.idea/
+/regen.go
+
+# Development
+internal/nat/
+
+# Testing
+x.bash
+*.decTest
